First Lohoff getter version

--- a/vignettes/biblio.bib
+++ b/vignettes/biblio.bib
@@ -81,3 +81,21 @@
 Publisher: Nature Publishing Group},
   pages = {487--497},
 }
+
+
+@article{lohoff_highly_2020,
+  title = {Highly multiplexed spatially resolved gene expression profiling of mouse organogenesis},
+  copyright = {© 2020, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NonCommercial 4.0 International), CC BY-NC 4.0, as described at http://creativecommons.org/licenses/by-nc/4.0/},
+  url = {https://www.biorxiv.org/content/10.1101/2020.11.20.391896v1},
+  doi = {10.1101/2020.11.20.391896},
+  language = {en},
+  urldate = {2020-12-15},
+  journal = {bioRxiv},
+  author = {Lohoff, T. and Ghazanfar, S. and Missarova, A. and Koulena, N. and Pierson, N. and Griffiths, J. A. and Bardot, E. S. and Eng, C.-H. L. and Tyser, R. C. V. and Argelaguet, R. and Guibentif, C. and Srinivas, S. and Briscoe, J. and Simons, B. D. and Hadjantonakis, A.-K. and Göttgens, B. and Reik, W. and Nichols, J. and Cai, L. and Marioni, J. C.},
+  month = nov,
+  year = {2020},
+  note = {Publisher: Cold Spring Harbor Laboratory
+Section: New Results},
+  pages = {2020.11.20.391896}
+}
+
