--- a/inst/scripts/1.12/make_multiome_data.Rmd
+++ b/inst/scripts/1.12/make_multiome_data.Rmd
@@ -77,7 +77,7 @@ gdf <- do.call(rbind, lapply(strsplit(gtf$V9, "; "), function(x){
 }))
 ```
 
-We drop `r sum(!rownames(rna) %in% gdf$SYMBOL)` of the `r nrow(rna)` genes from Ricard's data because they lack and Ensembl gene ID.
+We drop `r sum(!rownames(rna) %in% gdf$SYMBOL)` of the `r nrow(rna)` genes from Ricard's data because they lack an Ensembl gene ID.
 
 ```{r}
 add_rowdata <- function(sce, genes=gdf, ensemblise=FALSE){
@@ -135,6 +135,43 @@ with(reducedDim(rna, "rna.umap"),
     plot(V1, V2, col = MouseGastrulationData::EmbryoCelltypeColours[rna$celltype.mapped]))
 ```
 
+We restrict column data columns to a reduced set on request from the dataset author.
+
+```{r}
+allowed_columns = c(
+    "barcode",
+    "sample",
+    "sample_name",
+    "stage",
+    "genotype",
+    "celltype.mapped",
+    "nFeature_RNA",
+    "nCount_RNA",
+    "mitochondrial_percent_RNA",
+    "ribosomal_percent_RNA",
+    "nFrags_atac",
+    "TSSEnrichment_atac",
+    "doublet_score",
+    "doublet_call",
+    "genotype",
+    "nFrags_atac",
+    "TSSEnrichment_atac",
+    "doublet_score",
+    "doublet_call"
+)
+
+tidy_coldata = function(cd, cols = allowed_columns){
+    cd = cd[,names(cd) %in% allowed_columns]
+    cd = cd[,order(match(names(cd), allowed_columns))]
+    #rename celltype
+    names(cd)[names(cd) == "celltype.mapped"] = "celltype"
+    cd
+}
+
+colData(rna) = tidy_coldata(colData(rna))
+```
+
+
 We save the data, split by sample
 
 ```{r}
@@ -181,6 +218,7 @@ names(rowData(tss))[match("name", names(rowData(tss)))] = "SYMBOL"
 tss = attach_dimred(tss)
 names(assays(tss)) = tss_assay_name
 
+colData(tss) = tidy_coldata(colData(tss))
 
 path <- file.path("MouseGastrulationData", "RA_atac_tss", "1.12.0")
 save_files(path, tss)
@@ -201,6 +239,8 @@ peaks$sample_name = peaks$sample
 peaks$sample = sample_map$sample[match(peaks$sample_name, sample_map$sample_name)]
 peaks = attach_dimred(peaks)
 names(assays(peaks)) = peaks_assay_name
+
+colData(peaks) = tidy_coldata(colData(peaks))
 
 path <- file.path("MouseGastrulationData", "RA_atac_peaks", "1.12.0")
 save_files(path, peaks)
