--- a/vignettes/biblio.bib
+++ b/vignettes/biblio.bib
@@ -99,3 +99,12 @@ Section: New Results},
   pages = {2020.11.20.391896}
 }
 
+@article{ricard_multiome, 
+year = {2022}, 
+title = {{Decoding gene regulation in the mouse embryo using single-cell multi-omics}}, 
+author = {Argelaguet, Ricard and Lohoff, Tim and Li, Jingyu Gavin and Nakhuda, Asif and Drage, Deborah and Krueger, Felix and Velten, Lars and Clark, Stephen J. and Reik, Wolf}, 
+journal = {bioRxiv}, 
+doi = {10.1101/2022.06.15.496239}, 
+pages = {2022.06.15.496239}, 
+keywords = {}
+}
